Dark mode issues and Withdraw tab with scroll

--- a/src/pages/Pool/styles.styl
+++ b/src/pages/Pool/styles.styl
@@ -81,6 +81,7 @@ input {
   }
   &.dark{
     color: white;
+    background-color: #363636;
     border: 1px solid white;
   }
 
