--- a/src/pages/TokenModal/TokenSelector/styles.styl
+++ b/src/pages/TokenModal/TokenSelector/styles.styl
@@ -80,7 +80,11 @@
   font-size: 18px;
   outline: none;
   margin-bottom: 0.2em;
-
+  &.dark {
+    background-color: #363636;
+    color: white;
+  }
+  
   &:focus {
     border: 1px solid rgba(255,114,110,1);
   }
